# os192-Assignment3

./: CMakeLists.txt  Makefile  README.md  _cat  _echo  _forktest  _grep  _init  _kill  _ln  _ls  _mkdir  _myMemTest  _rm  _sh  _stressfs  _usertests  _wc  _zombie  cat.asm  cat.sym  defs.h  echo.asm  echo.sym  exec.c  file.c  forktest.asm  fs.c  fs.img  grep.asm  grep.sym  init.asm  init.sym  initcode.out  kalloc.c  kernel  kernel.asm  kernel.sym  kill.asm  kill.sym  (+33 more)
Project_Test/Tests/test_10/: Makefile  executeTest.sh  executeTestGDB.sh  testOutput.txt
Project_Test/XV6_Tests/: task1_1.c
